<resources>
    <string name="app_name">Eletric Car App</string>
    <string name="title">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kwh">Preço Kwh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="calcular">Calcular</string>

    <string-array name="array_cidades">
        <item>Brusque</item>
        <item>Blumenau</item>
        <item>Gaspar</item>
        <item>Luiz Alves</item>
    </string-array>
</resources>